# barks

./: .gitignore  Cargo.toml  Readme.md  build.rs
.github/: travis.yml
.github/workflows/: coverage.yml  rust.yml  style.yml
assembly/: Cargo.toml
assembly/src/: lib.rs
common/: Cargo.toml
common/kvstore/: Cargo.toml
common/kvstore/src/: leveldb_store.rs  lib.rs  store.rs  traits.rs
common/network-common/: Cargo.toml
common/network-common/src/: client.rs  lib.rs  protocol.rs  server.rs  traits.rs
common/network-shuffle/: Cargo.toml
common/network-shuffle/src/: leveldb_shuffle.rs  lib.rs  optimizations.rs  shuffle.rs  traits.rs
common/sketch/: Cargo.toml
common/sketch/src/: lib.rs
common/src/: allocator.rs  cache.rs  compression.rs  error.rs  lib.rs  storage.rs
common/tags/: Cargo.toml
common/tags/src/: lib.rs
common/unsafe/: Cargo.toml
common/unsafe/src/: lib.rs  memory.rs  traits.rs
common/utils/: Cargo.toml
common/utils/src/: collections.rs  io.rs  lib.rs  serialization.rs  time.rs  traits.rs
common/variant/: Cargo.toml
common/variant/src/: lib.rs
connector/avro/: Cargo.toml
connector/avro/src/: lib.rs
connector/kafka/: Cargo.toml
connector/kafka/src/: lib.rs
connector/kinesis/: Cargo.toml
connector/kinesis/src/: lib.rs
connector/protobuf/: Cargo.toml
connector/protobuf/src/: lib.rs
core/: Cargo.toml  build.rs  lcov.info
core/examples/: basic_rdd_demo.rs  distributed_basic.rs  distributed_shuffle_demo.rs  shuffle_demo.rs  shuffle_integration_test.rs  simple_task_demo.rs  task_system_demo.rs
core/src/: accumulator.rs  broadcast.rs  context.rs  expression.rs  lib.rs  literal.rs  logical_plan.rs  operations.rs  planner.rs  rdd.rs  storage.rs  traits.rs  types.rs
core/src/broadcast/: mod.rs  moka_broadcast_cache.rs
core/src/cache/: block_manager.rs  mod.rs  moka_block_manager.rs  moka_cache.rs  storage_level.rs
core/src/context/: distributed_context.rs  flow_context.rs  mod.rs
core/src/distributed/: context.rs  driver.rs  end_to_end_shuffle_test.rs  executor.rs  mod.rs  stage.rs  task.rs  types.rs
core/src/operations/: tests.rs
core/src/rdd/: actions.rs  base.rs  cached_rdd.rs  checkpointed_rdd.rs  distinct_rdd.rs  distributed.rs  joined_rdd.rs  mod.rs  repartition_rdd.rs  shuffle_tests.rs  shuffled_rdd.rs  sorted_rdd.rs  transformations.rs
core/src/scheduler/: local_scheduler.rs  mod.rs
core/src/shuffle/: aggregator.rs  dependency.rs  mod.rs  partitioner.rs
core/tests/: cache_tests.rs  checkpoint_integration_test.rs  comprehensive_shuffle_tests.rs  comprehensive_shuffle_tests.rs.disabled  distributed_context_tests.rs  distributed_context_tests.rs.disabled  distributed_execution.rs  distributed_integration_test.rs  distributed_rdd_test.rs  executor_retry_test.rs  integration_tests.rs  local_rdd_api.rs  new_task_system_test.rs  pair_rdd_test.rs  parallel_tests.rs  shuffle.rs
core/tests/common/: mod.rs
examples/: Cargo.toml  csv_parquet_connectors_example.rs  distributed_app.rs  distributed_example.rs  distributed_sql_example.rs  enhanced_shuffle_demo.rs  local_rdd_api.rs  resource_aware_scheduling_demo.rs  shuffle_api.rs  simple_csv_test.rs  sql_datafusion_example.rs  string_tuple_demo.rs
examples/src/: advanced_distributed_example.rs  distributed_demo.rs  distributed_rdd_example.rs  lib.rs
graphx/: Cargo.toml
graphx/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: lib.rs
mllib/distributed/: Cargo.toml
mllib/distributed/src/: lib.rs
mllib/local/: Cargo.toml
mllib/local/src/: lib.rs
proto/: driver.proto  executor.proto
repl/: Cargo.toml
repl/src/: lib.rs
resource-managers/kubernetes/: Cargo.toml
resource-managers/kubernetes/src/: lib.rs
resource-managers/yarn/: Cargo.toml
resource-managers/yarn/src/: lib.rs
sql/api/: Cargo.toml
sql/api/src/: dataframe.rs  dataset.rs  functions.rs  lib.rs  traits.rs  types.rs
sql/catalyst/: Cargo.toml
sql/catalyst/src/: lib.rs
sql/connect/client/: Cargo.toml
sql/connect/client/src/: lib.rs
sql/connect/common/: Cargo.toml
sql/connect/common/src/: lib.rs
sql/connect/server/: Cargo.toml
sql/connect/server/src/: lib.rs
sql/core/: Cargo.toml
sql/core/src/: columnar.rs  datasources.rs  execution.rs  lib.rs  rdd_exec.rs  rdd_sql_bridge.rs  tests.rs  traits.rs
sql/hive/: Cargo.toml
sql/hive/src/: lib.rs
streaming/: Cargo.toml
streaming/src/: lib.rs
tools/: Cargo.toml
tools/src/: lib.rs
