[workspace]
resolver = "3" # default in edition 2024
members = [
    "common/*",
    "core",
    # "sql/api",
    # "sql/catalyst",
    # "sql/core",
    # "sql/hive",
    # "sql/connect/*",
    # "streaming",
    # "mllib/*",
    # "graphx",
    # "connector/*",
    # "resource-managers/*",
    # "launcher",
    # "repl",
    "examples",
    # "assembly",
    # "tools"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["lonless9"]
license = "Apache-2.0"
repository = "https://github.com/lonless9/barks"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# RPC
tonic = "0.13.1"
prost = "0.13.5"
tonic-build = "0.13.1"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
typetag = "0.2"

# parallel computing
rayon = "1.8"

# concurrent cache
moka = { version = "0.12", features = ["future"] }

# command-line parsing
clap = { version = "4.4", features = ["derive"] }

# logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# error handling
anyhow = "1.0"
thiserror = "2"

# web services
axum = "0.8.4"
hyper = { version = "1.0", features = ["full"] }

# HTTP client (for shuffle data pull)
reqwest = "0.12"

# async traits
async-trait = "0.1"

# futures utilities
futures = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# CPU count detection
num_cpus = "1.0"

# temporary files
tempfile = "3.0"

# persistent storage
rusty-leveldb = "3.0.3"
