[package]
name = "barks-assembly"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../core" }
barks-sql-core = { path = "../sql/core" }
barks-streaming = { path = "../streaming" }
barks-mllib-distributed = { path = "../mllib/distributed" }
barks-graphx = { path = "../graphx" }
barks-launcher = { path = "../launcher" }
barks-utils = { path = "../common/utils" }
