[package]
name = "barks-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
aws = ["object_store/aws"]
azure = ["object_store/azure"]
gcp = ["object_store/gcp"]

[dependencies]
# async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# error handling
thiserror.workspace = true
anyhow.workspace = true

# SQL query engine
datafusion.workspace = true

# caching
moka.workspace = true

# object storage
object_store.workspace = true

# hex encoding for keys
hex = "0.4"

# memory allocation
bumpalo = "3.14.0"

# compression
zstd.workspace = true
lz4_flex.workspace = true
snap.workspace = true

# For blocking operations in async context
tokio-util.workspace = true

# logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
