[package]
name = "barks-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
bincode.workspace = true
anyhow.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tracing-test = "0.2"
