[package]
name = "barks-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
bincode.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
typetag.workspace = true
async-trait.workspace = true
dyn-clone = "1.0"
num_cpus.workspace = true
barks-utils = { path = "../common/utils" }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tracing-test = "0.2"
futures = "0.3"
