[package]
name = "barks-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../core" }
barks-network-shuffle = { path = "../common/network-shuffle" }
# barks-sql-core = { path = "../sql/core" }
# barks-streaming = { path = "../streaming" }
# barks-mllib-local = { path = "../mllib/local" }
# barks-graphx = { path = "../graphx" }
barks-utils = { path = "../common/utils" }
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
clap.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[[bin]]
name = "local_rdd_api"
path = "local_rdd_api.rs"

# Disabled until shuffle functionality is implemented
# [[bin]]
# name = "shuffle_api"
# path = "shuffle_api.rs"

# Disabled as it is now covered by an integration test in `core/tests/distributed_execution.rs`
# [[bin]]
# name = "distributed_app"
# path = "distributed_app.rs"

# Disabled until shuffle functionality is implemented
# [[bin]]
# name = "enhanced_shuffle_demo"
# path = "enhanced_shuffle_demo.rs"
