[package]
name = "barks-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../core" }
barks-utils = { path = "../common/utils" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
