[package]
name = "barks-network-shuffle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-network-common = { path = "../network-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
server = ["axum", "hyper", "tracing"]
