[package]
name = "barks-network-shuffle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-network-common = { path = "../network-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
typetag.workspace = true
lz4_flex = { version = "0.11", optional = true }
moka.workspace = true
rusty-leveldb.workspace = true

[features]
server = ["axum", "hyper", "tracing", "reqwest", "futures"]
compression = ["lz4_flex"]

[dev-dependencies]
tempfile = "3.10"
