[package]
name = "barks-connector-kinesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../../core" }
barks-streaming = { path = "../../streaming" }
barks-utils = { path = "../../common/utils" }
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
