[package]
name = "barks-mllib-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../../core" }
barks-utils = { path = "../../common/utils" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
