[package]
name = "barks-sql-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-core = { path = "../../core" }
barks-utils = { path = "../../common/utils" }
barks-sql-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
datafusion.workspace = true
arrow.workspace = true
uuid.workspace = true
num_cpus.workspace = true

[dev-dependencies]
tokio.workspace = true
