[package]
name = "barks-sql-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-sql-catalyst = { path = "../catalyst" }
barks-core = { path = "../../core" }
barks-utils = { path = "../../common/utils" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
datafusion.workspace = true
arrow.workspace = true
uuid = { version = "1.0", features = ["v4"] }
num_cpus.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
