[package]
name = "barks-sql-hive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-sql-core = { path = "../core" }
barks-sql-catalyst = { path = "../catalyst" }
barks-sql-api = { path = "../api" }
barks-core = { path = "../../core" }
barks-utils = { path = "../../common/utils" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
