[package]
name = "barks-connect-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barks-connect-common = { path = "../common" }
barks-sql-api = { path = "../../api" }
barks-utils = { path = "../../../common/utils" }
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
